--- a/templates/home.html
+++ b/templates/home.html
@@ -1,34 +1,39 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <title>Forum Desa</title>
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
   </head>
   <body>
-    <h1>Tema</h1>
-
-    <table border="1">
-      <thead>
-        <tr>
-          <th>Tema</th>
-          <th>Topik (Sub-Tema)</th>
-          <th>Tanggapan</th>
-          <th>Last Post</th>
-        </tr>
-      </thead>
-      <tbody>
-        {% for board in boards %}
-          <tr>
-            <td>
-              {{ board.name }}<br>
-              <small style="color: #888">{{ board.description }}</small>
-            </td>
-            <td>0</td>
-            <td>0</td>
-            <td></td>
+    <div class="container">
+      <ol class="breadcrumb my-4">
+        <li class="breadcrumb-item active">Tema</li>
+      </ol>
+      <table class="table">
+        <thead class="thead-inverse">
+          <tr style="background: black; color:white;">
+            <th>Tema</th>
+            <th>Topik (Sub-Tema)</th>
+            <th>Tanggapan</th>
+            <th>Last Post</th>
           </tr>
-        {% endfor %}
-      </tbody>
-    </table>
+        </thead>
+        <tbody>
+          {% for board in boards %}
+            <tr>
+              <td>
+                {{ board.name }}<br>
+                <small style="color: #888">{{ board.description }}</small>
+              </td>
+              <td>0</td>
+              <td>0</td>
+              <td></td>
+            </tr>
+          {% endfor %}
+        </tbody>
+      </table>
+    </div>
   </body>
 </html>
