--- a/templates/base.html
+++ b/templates/base.html
@@ -5,8 +5,17 @@
     <meta charset="utf-8">
     <title>{% block title %}Forum Desa{% endblock %}</title>
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/app.css' %}">
   </head>
   <body>
+
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container">
+        <a class="navbar-brand" href="{% url 'home' %}">Forum Desa</a>
+      </div>
+    </nav>
+
+
     <div class="container">
       <ol class="breadcrumb my-4">
         {% block breadcrumb %}
@@ -15,5 +24,6 @@
       {% block content %}
       {% endblock %}
     </div>
+
   </body>
 </html>
