Part 4 - 2. Sign Up

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,24 +6,23 @@
     <title>{% block title %}Forum Desa{% endblock %}</title>
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/app.css' %}">
+    {% block stylesheet %}{% endblock %}  <!-- HERE -->
   </head>
   <body>
-
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    {% block body %}  <!-- HERE -->
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+          <a class="navbar-brand" href="{% url 'home' %}">Tema</a>
+        </div>
+      </nav>
       <div class="container">
-        <a class="navbar-brand" href="{% url 'home' %}">Forum Desa</a>
-      </div>
-    </nav>
-
-
-    <div class="container">
-      <ol class="breadcrumb my-4">
-        {% block breadcrumb %}
+        <ol class="breadcrumb my-4">
+          {% block breadcrumb %}
+          {% endblock %}
+        </ol>
+        {% block content %}
         {% endblock %}
-      </ol>
-      {% block content %}
-      {% endblock %}
-    </div>
-
+      </div>
+    {% endblock body %}  <!-- AND HERE -->
   </body>
 </html>
