--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="{% static 'css/app.css' %}">
     {% block stylesheet %}{% endblock %}  <!-- HERE -->
   </head>
-  <body>
+  <body style="background-image: url({% static 'img/panel1.jpg' %});">
     {% block body %}
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
       <div class="container">
@@ -50,7 +50,7 @@
       {% endblock %}
     </div>
     {% endblock body %}
-    
+
     <script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
     <script src="{% static 'js/popper.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
