Part 5 - 3. Topic Posts View

--- a/templates/topics.html
+++ b/templates/topics.html
@@ -5,30 +5,29 @@
 {% endblock %}
 
 {% block breadcrumb %}
-  <li class="breadcrumb-item"><a href="{% url 'home' %}">Tema</a></li>
+  <li class="breadcrumb-item"><a href="{% url 'home' %}">Boards</a></li>
   <li class="breadcrumb-item active">{{ board.name }}</li>
 {% endblock %}
 
 {% block content %}
   <div class="mb-4">
-    <a href="{% url 'new_topic' board.pk %}" class="btn btn-primary">New topic (Sub-Tema)</a>
+    <a href="{% url 'new_topic' board.pk %}" class="btn btn-primary">New topic</a>
   </div>
 
   <table class="table">
     <thead class="thead-inverse">
-      <tr style="background: black; color:white;">
-        <th>Topic (Sub-Tema)</th>
+      <tr>
+        <th>Topic</th>
         <th>Starter</th>
         <th>Replies</th>
         <th>Views</th>
         <th>Last Update</th>
       </tr>
     </thead>
-    
     <tbody>
       {% for topic in board.topics.all %}
         <tr>
-          <td>{{ topic.subject }}</td>
+          <td><a href="{% url 'topic_posts' board.pk topic.pk %}">{{ topic.subject }}</a></td>
           <td>{{ topic.starter.username }}</td>
           <td>0</td>
           <td>0</td>
