--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="{% static 'css/app.css' %}">
     {% block stylesheet %}{% endblock %}  <!-- HERE -->
   </head>
-  <body style="background-image: url({% static 'img/panel1.jpg' %});">
+  <body style="background: #c9c9c9">
+  <!-- <body style="background-image: url({% static 'img/panel1.jpg' %});"> -->
     {% block body %}
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
       <div class="container">
