--- a/templates/home.html
+++ b/templates/home.html
@@ -1,16 +1,21 @@
 {% extends 'base.html' %}
 
 {% block breadcrumb %}
-  <li class="breadcrumb-item active">Tema</li>
+  <li class="breadcrumb-item active">Boards</li>
 {% endblock %}
 
 {% block content %}
   <table class="table">
     <thead class="thead-inverse">
+    <thead class="thead-inverse">
       <tr style="background: black; color:white;">
-        <th>Tema</th>
+        <!-- <th>Tema</th>
         <th>Topik (Sub-Tema)</th>
         <th>Tanggapan</th>
+        <th>Last Post</th> -->
+        <th>Board</th>
+        <th>Posts</th>
+        <th>Topics</th>
         <th>Last Post</th>
       </tr>
     </thead>
@@ -21,9 +26,27 @@
             <a href="{% url 'board_topics' board.pk %}">{{ board.name }}</a>
             <small class="text-muted d-block">{{ board.description }}</small>
           </td>
-          <td class="align-middle">0</td>
-          <td class="align-middle">0</td>
-          <td></td>
+          <td class="align-middle">
+            {{ board.get_posts_count }}
+          </td>
+          <td class="align-middle">
+            {{ board.topics.count }}
+          </td>
+          <td class="align-middle">
+            {% with post=board.get_last_post %}
+              {% if post %}
+                <small>
+                  <a href="{% url 'topic_posts' board.pk post.topic.pk %}">
+                    By {{ post.created_by.username }} at {{ post.created_at }}
+                  </a>
+                </small>
+              {% else %}
+                <small class="text-muted">
+                  <em>No posts yet.</em>
+                </small>
+              {% endif %}
+            {% endwith %}
+          </td>
         </tr>
       {% endfor %}
     </tbody>
